--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>How CodersTech Works</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f8f9fb;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(to right, #6a11cb, #2575fc);
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: 500;
+      margin: 10px 20px;
+      padding: 10px 15px;
+      border-radius: 6px;
+      transition: background 0.3s ease;
+    }
+    nav a:hover {
+      background-color: #e0e0e0;
+    }
+    .section {
+      max-width: 1000px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
+    .section h2 {
+      color: #6a11cb;
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    .section p {
+      line-height: 1.7em;
+      font-size: 1.1em;
+      margin-bottom: 30px;
+    }
+    .step {
+      margin-bottom: 40px;
+      padding: 20px;
+      background-color: white;
+      border-left: 5px solid #2575fc;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+    .step h3 {
+      margin-bottom: 10px;
+      color: #2575fc;
+    }
+    .home-button {
+      display: block;
+      width: fit-content;
+      margin: 40px auto 0;
+      padding: 12px 24px;
+      background: #2575fc;
+      color: white;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background 0.3s ease;
+    }
+    .home-button:hover {
+      background: #1a4db8;
+    }
+    footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 60px;
+    }
+  </style>
+</head>
+<body>
 
+<header>
+  <h1>How CodersTech Works</h1>
+  <p>Our Process. Our Passion. Our Purpose.</p>
+</header>
+
+<nav>
+  <a href="https://yasinabrahimi.github.io/CodersTech-Web-Page/">🏠 Home</a>
+</nav>
+
+<div class="section">
+  <h2>Our Team Workflow</h2>
+
+  <div class="step">
+    <h3>1. Identify Real-World Problems</h3>
+    <p>We begin by exploring real-life challenges that align with the United Nations Sustainable Development Goals. These can be community needs, educational gaps, or environmental issues.</p>
+  </div>
+
+  <div class="step">
+    <h3>2. Brainstorm & Research</h3>
+    <p>Our team gathers to generate ideas through collaborative sessions. We conduct research, explore data, and validate our concepts for feasibility and innovation.</p>
+  </div>
+
+  <div class="step">
+    <h3>3. Build Prototypes</h3>
+    <p>Using programming, AI, robotics, and mobile development tools, we develop initial versions of our projects—apps, bots, or platforms.</p>
+  </div>
+
+  <div class="step">
+    <h3>4. Test & Improve</h3>
+    <p>We engage in iterative testing—gathering feedback from real users and communities. This helps us refine and enhance our designs for better usability and performance.</p>
+  </div>
+
+  <div class="step">
+    <h3>5. Community Engagement</h3>
+    <p>We organize outreach sessions and school workshops to promote tech awareness. These include tutorials, presentations, and hands-on demos for students and teachers alike.</p>
+  </div>
+
+  <div class="step">
+    <h3>6. Compete & Collaborate</h3>
+    <p>We proudly participate in national and international competitions. Through these platforms, we share our ideas, learn from others, and gain recognition for our innovations.</p>
+  </div>
+
+  <div class="step">
+    <h3>7. Evolve Constantly</h3>
+    <p>CodersTech is always evolving. With each project and challenge, we gain new skills, refine our approach, and grow as a team of changemakers.</p>
+  </div>
+
+  <a href="https://yasinabrahimi.github.io/CodersTech-Web-Page/" class="home-button">⬅️ Back to Home</a>
+</div>
+
+<footer>
+  <p>&copy; 2024 CodersTech. Innovating the future together.</p>
+</footer>
+
+</body>
+</html>
